# setreplace-py

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
docs/: engine.md  python-api.md  release.md  rust.md
examples/: bench.rs  growth.rs  orderings.rs  print_states.rs
python/: Cargo.toml  README.md  pyproject.toml  setreplace.pyi
python/src/: lib.rs
python/tests/: test_api.py
scripts/: scan_growth_rates.py
src/: atoms_index.rs  enumerate.rs  error.rs  lib.rs  matcher.rs  pcg.rs  rule.rs  system.rs
tests/: enumeration_vectors.rs  wolfram_vectors.rs
tests/fixtures/: enumerate_rules_ground_truth.txt  wl_2_2_to_2_2.txt
viz/: Cargo.toml  README.md
viz/examples/: compose_comparison.rs  inline_editions.rs  readme_figures.rs  showcase.rs
viz/src/: causal.rs  geometry.rs  layout.rs  lib.rs  pcg.rs  plot.rs  png.rs  style.rs  svg.rs  vec2.rs
