[package]
name = "setreplace-python"
version = "0.2.0"
edition = "2021"
description = "Python bindings for the setreplace engine and visualization"
license = "MIT"

[lib]
name = "setreplace_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["abi3-py39"] }
setreplace = { path = ".." }
setreplace-viz = { path = "../viz" }
